starting removing new Integer (etc.) from code. Fixed 'clean' target too