@@ -40,7 +40,7 @@ public class non_terminal extends symbol {
       _index = next_index++;
 
       /* add to by_index set */
-      _all_by_index.put(new Integer(_index), this);
+      _all_by_index.put(Integer.valueOf(_index), this);
     }
 
   /*. . . . . . . . . . . . . . . . . . . . . . . . . . . . . .*/
@@ -82,7 +82,7 @@ public class non_terminal extends symbol {
   /** Lookup a non terminal by index. */
   public static non_terminal find(int indx)
     {
-      Integer the_indx = new Integer(indx);
+      Integer the_indx = Integer.valueOf(indx);
 
       return (non_terminal)_all_by_index.get(the_indx);
     }
