@@ -44,7 +44,7 @@ public class terminal extends symbol {
       _precedence_side = precedence_side;
 
       /* add to by_index set */
-      _all_by_index.put(new Integer(_index), this);
+      _all_by_index.put(Integer.valueOf(_index), this);
     }
 
   /*. . . . . . . . . . . . . . . . . . . . . . . . . . . . . .*/
@@ -104,7 +104,7 @@ public class terminal extends symbol {
   /** Lookup a terminal by index. */
   public static terminal find(int indx)
     {
-      Integer the_indx = new Integer(indx);
+      Integer the_indx = Integer.valueOf(indx);
 
       return (terminal)_all_by_index.get(the_indx);
     }
